<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/authenticate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>