<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/password_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/submit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/aqua"
                android:text="@string/register_user"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:text="Sign Up" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/aqua"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:text="Forgot Password" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_signin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>