<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/new_marker_title" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/new_marker_message" />
        <Spinner
            android:id="@+id/marker_number_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:prompt="@string/new_marker_prompt"
            android:entries="@array/numbers_array"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>